# LangChain_Learning

./: .env.example  .gitignore  README.md  main.py  models.py  pyproject.toml
agiproject.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
langchain_apis/: OST.md  fewshot_prompt_template.py
langchain_apis/structured_output/: with_structured_output.py
notes/: 基础概念.md
